css/style.css
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
    display: block;
}

body {
    line-height: 1;
}

ol, ul {
    list-style: none;
}

blockquote, q {
    quotes: none;
}

blockquote:before, blockquote:after, q:before, q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    font-size: 1em;
    margin: 0;
    padding: 4px;
    line-height: 1.5;
    color: rgba(16, 16, 16, 0.88);
    -webkit-font-rendering: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

body {
    background: rgba(16, 16, 16, 0.05);
}

#container {
    background: #fff;
    border-radius: 2px;
    box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
    overflow: hidden;
}

strong {
    color: #c19344;
    font-weight: 700;
}

a {
    text-decoration: none;
    color: inherit;
}

a.telephone {
    font-size: 0.813em;
    color: rgba(16, 16, 16, 0.5);
    border-bottom: 1px solid rgba(16, 16, 16, 0.2);
    padding: 0.25em 0;
    transition: all 0.3s;
    margin: 0.25em 0;
    display: inline-block;
}

a.telephone:hover {
    color: rgba(16, 16, 16, 0.7);
    border-bottom: 1px solid rgba(16, 16, 16, 0.4);
    transition: all 0.3s;
}

header {
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: space-between;
    justify-content: space-between;
    padding: 2em;
}

header img {
    height: 50px;
}

header nav {
    font-size: 0.875em;
}

header nav a {
    color: inherit;
    text-decoration: none;
    margin: 0 1em;
    padding-bottom: 0.5em;
    transition: color 0.3s;
}

header nav a:hover {
    color: #c19344;
    border-bottom: 2px solid;
    transition: color 0.3s;
}

header #social {
    width: 156px;
}

#hero-text {
    padding: 0 2em 2em 2em;
    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
}

#hero-text h1 {
    font-family: 'Bitter', serif;
    font-size: 3em;
    font-weight: 700;
    letter-spacing: -1px;
    white-space: pre-line;
    line-height: 1.1;
}

#hero-text h2 {
    font-size: 1.125em;
    line-height: 1.5;
    padding: 1em 0;
    white-space: pre-line;
    min-width: 400px;
    width: 33.3332%;
}

#hero-text .options, #closing .options {
    max-width: 180px;
    text-align: center;
    display: inline-block;
}

.btn {
    color: #fff;
    box-shadow: inset 0 0 0 2px rgba(0, 0, 0, .05);
    font-weight: 700;
    padding: 0.75em 1.25em;
    text-decoration: none;
    display: inline-block;
    border-radius: 50px;
    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
    text-transform: uppercase;
    transition: box-shadow 0.3s;
}

.gradient {
    background: -moz-linear-gradient(0deg, #e5d081 0%, #aa7d2a 50%, #6e4905 100%);
    background: -webkit-linear-gradient(0deg, #e5d081 0%, #aa7d2a 50%, #6e4905 100%);
    background: -ms-linear-gradient(0deg, #e5d081 0%, #aa7d2a 50%, #6e4905 100%);
    background: linear-gradient(to right, #e5d081 0%, #aa7d2a 50%, #6e4905 100%);
}

.btn:hover {
    box-shadow: inset 0 0 0 2px rgba(0, 0, 0, .2);
    transition: box-shadow 0.3s;
}

.material-icons {
    vertical-align: middle;
    font-size: 18px;
    position: relative;
    top: -1px;
    margin-right: 2px;
    color: rgba(0, 0, 0, 0.5);
    text-shadow: none;
}

.material-icons.gold {
    background: -moz-linear-gradient(0deg, #e5d081 0%, #aa7d2a 100%);
    background: -webkit-linear-gradient(0deg, #e5d081 0%, #aa7d2a 100%);
    background: -ms-linear-gradient(0deg, #e5d081 0%, #aa7d2a 100%);
    background: linear-gradient(to right, #e5d081 0%, #aa7d2a 100%);
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    text-fill-color: transparent;
}

#about, #closing, #contact {
    padding: 4em 2em;
}

#about h3 {
    font-size: 1.750em;
    text-align: center;
    max-width: 75%;
    margin: 0 auto;
}

#reviews {
    max-width: 800px;
    margin: 0 auto;
}

#reviews h3 {
    font-family: 'Bitter', serif;
    font-weight: 400;
    font-style: italic;
    font-size: 1em;
    color: rgba(16, 16, 16, 0.7);
    padding: 0.750em 0;
}

#reviews p {
    color: rgba(16, 16, 16, 0.5);
    font-size: 0.750em;
}

#reviews a {
    border-bottom: 1px solid rgba(16, 16, 16, 0.2);
    padding-bottom: 0.25em;
    transition: all 0.3s;
    display: inline-block;
}

#reviews a:hover {
    color: rgba(16, 16, 16, 0.7);
    border-bottom: 1px solid rgba(16, 16, 16, 0.4);
    transition: all 0.3s;
}

#gallery {
    height: 360px;
    box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, .15);
    /*transform: skewY(5deg);*/
}

#closing h4 {
    font-size: 1.375em;
    text-align: center;
    margin: 0 auto;
    white-space: pre-line;
    min-width: 400px;
    width: 40%;
}

#closing .book-online {
    margin: 0 auto;
    text-align: center;
    padding-top: 2em;
}

#contact {
    padding-top: 0;
}

#contact h5 {
    text-align: center;
    padding-bottom: 2em;
    text-transform: uppercase;
}

.card {
    height: 300px;
    padding: 1em;
    margin: 0 auto;
    border-radius: 6px;
    box-shadow: 0 2px 36px rgba(0, 0, 0, 0.1);
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    line-height: 2.4;
    overflow: hidden;
}

.card.no-padding {
    padding: 0;
}

.card ul {
    width: 50%;
}

.card ul:nth-of-type(2) {
    text-align: right;
    color: rgba(16, 16, 16, 0.6);
}

.card iframe {
    width: 100%;
    border-radius: 6px;
}

footer {
    text-align: center;
    padding-bottom: 2.6667em;
    font-size: 0.750em;
    color: rgba(16, 16, 16, 0.5);
}

.grid {
    display: block;
    clear: both;
}

.grid .unit {
    float: left;
    width: 100%;
}

.grid .whole {
    width: 100%;
    padding: 2em 2em 0 2em;
}

.grid .align-center {
    text-align: center;
}

.grid .half {
    width: 50%;
    padding: 0 2em;
}

.grid .one-third {
    width: 33.3332%;
}

.grid .one-quarter {
    width: 25%;
}

.grid:before, .grid:after {
    display: table;
    content: "";
    line-height: 0;
}

.grid:after {
    clear: both;
}

@media screen and (max-width: 48em) {
    #about h3 {
        max-width: 85%;
    }
    #closing h4 {
        width: auto;
    }
    header #social {
        display: none;
    }
}

@media screen and (max-width: 46em) {
    #hero-text h2, #closing h4 {
        min-width: 0;
        width: auto;
    }
}

@media screen and (max-width: 37.5em) {
    html, body {
        margin: 0;
        padding: 0;
    }
    header img {
        height: 40px;
    }
    header, #hero-text, .grid .whole {
        padding: 1.125em;
    }
    #hero-text {
        padding-top: 0;
    }
    header nav {
        display: none;
    }
    #hero-text h1 {
        font-size: 2em;
    }
    #hero-text h2 {
        font-size: 1em;
    }
    #hero-text .options {
        max-width: none;
        display: -moz-box;
        display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;
        -webkit-justify-content: flex-start;
        justify-content: flex-start;
        -webkit-align-items: center;
        align-items: center;
    }
    #hero-text .options a.telephone {
        box-shadow: inset 0 0 0 2px rgba(0, 0, 0, .1);
        border: 0;
        padding: 0.75em 1em;
        border-radius: 100px;
        margin-left: 0.75em;
    }
    #closing .options {
        max-width: 150px;
    }
    #closing .options a.telephone {
        margin-top: 0.5em;
        display: inline-block;
    }
    .material-icons {
        font-size: 16px;
    }
    .btn {
        font-size: 0.813em;
    }
    #about, #closing, #contact {
        padding: 1.5em;
    }
    #closing .book-online {
        padding-top: 1.250em;
    }
    #contact h5 {
        padding-bottom: 1.250em;
    }
    #contact {
        padding-top: 0;
    }
    #about h3, #closing h4 {
        max-width: none;
        font-size: 1.250em;
    }
    #reviews h3 {
        font-size: 0.875em;
    }
    .card {
        font-size: 0.875em;
        height: 260px;
    }
    .grid .half {
        width: 100%;
        padding: 0;
    }
    .grid .half:first-child {
        padding-top: 0;
        padding-bottom: 1.250em;
    }
    .grid .half:last-child {
        padding-bottom: 0;
    }
    footer {
        padding-top: 1.250em;
    }
}

@media screen and (max-width: 22em) {
    #hero-text .options {
        -webkit-flex-wrap: wrap;
        flex-wrap: wrap;
    }
    #about, #closing, #contact, .grid .whole {
        padding: 1.125em;
    }
    #contact h5, .grid .half:first-child {
        padding-bottom: 1.125em;
    }
    #hero-text .book-online .options .btn, #hero-text .options a.telephone {
        width: 100%;
        margin: 0;
    }
    #hero-text .options a.telephone {
        margin-top: 1em;
    }
    #hero-text h1 {
        font-size: 1.5em;
    }
    #about h3, #closing h4 {
        font-size: 1em;
    }
    #hero-text h2, #reviews h3 {
        font-size: 0.875em;
    }
    footer {
        padding: 1.125em 1.125em 2.6667em 1.125em;
    }
}

